[package]
name = "horntail"
version = "0.3.0"
edition = "2024"

[features]
default = ["image"]
image = ["dep:image"]

[dependencies]
uuid = "1"
memmap2 = "0.9.7"
aes = "0.8.4"
flate2 = { version = "1.0.35", features = ["zlib"] }
image = { version = "0.25.6", optional = true }
encoding_rs = { version = "0.8.35" }
