[package]
name = "horntail"
version = "0.3.1"
edition = "2024"
description = "maplestory resource file unpack lib"
repository = "https://github.com/anonymous5l/horntail"
license = "MIT"
readme = "README.md"
authors = ["Anonymous5L"]
exclude = ["tests"]

[features]
default = ["image"]
image = ["dep:image"]

[dependencies]
uuid = "1"
memmap2 = "0.9.7"
aes = "0.8.4"
flate2 = { version = "1.0.35", features = ["zlib"] }
image = { version = "0.25.6", optional = true }
encoding_rs = { version = "0.8.35" }
