[package]
name = "horntail"
version = "0.4.0"
edition = "2024"
description = "maplestory resource file unpack lib"
repository = "https://github.com/anonymous5l/horntail"
license = "MIT"
readme = "README.md"
authors = ["Anonymous5L"]
exclude = ["tests"]

[features]
default = ["image", "extra"]
image = ["dep:image"]
extra = ["dep:ahash"]

[dependencies]
uuid = "1"
memmap2 = "0.9.7"
aes = "0.8.4"
flate2 = { version = "1.1.2", features = ["zlib"] }
image = { version = "0.25.6", optional = true }
encoding_rs = { version = "0.8.35" }
ahash = { version = "0.8.12", optional = true }