[package]
name = "horntail_cli"
version = "0.3.0"
edition = "2024"
description = "maplestory resource file unpack commandline tool."
repository = "https://github.com/anonymous5l/horntail"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
ratatui-image = "4.2.0"
tui-input = "0.14.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
clap = { version = "4", features = ["derive"] }
ahash = "0.8.12"
walkdir = "2"
horntail = { path = "../horntail" }